fixing stupid layout issues

--- a/trunk/HealthCareWeb/WebContent/css/style.css
+++ b/trunk/HealthCareWeb/WebContent/css/style.css
@@ -16,8 +16,16 @@ html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre
 	font-size:20px;
 }
 .row-fluid.main{
-	margin-left: 345px;
+	margin-left: 23.5%;
 }
 #payer .dataTables_info, #payer #payers_length, #payer .dataTables_paginate{
 	display:none !important;
+}
+.brand i.icon-plus{
+	opacity: 1;
+	vertical-align: 0px;
+	margin-right:2px;
+}
+.row-fluid.main {
+width: 76.5%;
 }
